--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "require": {
         "php": ">=5.6.0",
         "topthink/framework": ">=5.1.0",
-        "topthink/think-helper": "^3.1"
+        "topthink/think-helper": "^3.1",
+        "firebase/php-jwt": "^6.0"
     },
     "autoload": {
         "psr-4": {
@@ -29,5 +30,3 @@
         }
     }
 }
-
-
