--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "php": ">=7.1.0",
         "topthink/framework": ">=5.1.0",
         "topthink/think-helper": "^3.1",
-        "firebase/php-jwt": "^6.0"
+        "firebase/php-jwt": "6.10.0"
     },
     "autoload": {
         "psr-4": {
